infra/k8s/auth-postgresql-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-postgresql-service
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
