infra/k8s/document-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: document
  template:
    metadata:
      labels:
        app: document
    spec:
      containers:
        - name: document
          image: cakitomakito/document:latest
          ports:
            - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: document-srv
spec:
  selector:
    app: document
  ports:
    - name: http
      port: 3000
      targetPort: 3000
