infra/k8s/document-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-mongo-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: document-mongo
  template:
    metadata:
      labels:
        app: document-mongo
    spec:
      containers:
        - name: document-mongo
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: document-mongo-srv
spec:
  selector:
    app: document-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
